# board_game_ai_test

./: .gitignore  Cargo.toml  README.md
src/: ai_infra.rs  dumm_ai.rs  genetic_algo_op.rs  line_four_7x6.rs  line_four_8x8.rs  main.rs  monte_carlo_game.rs  monte_carlo_game_v2.rs  monte_carlo_win_reducer.rs  multi_score_reducer.rs  tic_tac_toe.rs  uno_basic_game.rs
src/monte_carlo_v2/: arena.rs  impl1.rs  impl2.rs  impl3.rs  impl4.rs  mod.rs  moves_buffer.rs
src/old_monte_carlo/: mod.rs  monte_carlo_main.rs  monte_carlo_main2.rs  monte_carlo_main3.rs  monte_carlo_main4.rs  monte_carlo_main5.rs  monte_carlo_main6.rs  monte_carlo_main7.rs  monte_carlo_main8.rs
