[package]
name = "line_four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.11.0", features = ["collections"]}
arrayvec = "0.7.2"
rustc-hash = "1.1.0"

[profile.release]
debug = true
