[package]
name = "line_four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.11.0", features = ["collections"]}
arrayvec = "0.7.2"
rustc-hash = "1.1.0"
typed-arena = "2.0.*"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
serde = { version = "1.0.163", features =["derive"] }
serde_json = { version = "1.0.96" }
rand_distr = "0.4.3"
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.8.*"

[profile.release]
debug = true